create and style navigation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="main.css" rel="stylesheet">
-</head>
-<body>
-  <script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <!-- NAVIGATION START -->
+      <nav class="navigation">
+        <h1 class="logo"><a href="#">Animals</a></h1>
+
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./cats.html">Cats</a></li>
+          <li><a href="./dogs.html">Dogs</a></li>
+        </ul>
+      </nav>
+      <!-- NAVIGATION END -->
+    </header>
+
+    <script src="main.js"></script>
+  </body>
 </html>
