added puppies to dogs page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flexbox Intro</title>
     <link href="main.css" rel="stylesheet" />
   </head>
   <body>
@@ -21,6 +21,13 @@
       <!-- NAVIGATION END -->
     </header>
 
+    <main>
+      <h1>Home Page for Animals</h1>
+    </main>
+
+    <footer>
+      @2020 by me
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
